# youtube-creator-retention

./: .coverage  .env.example  .gitignore  CODEOWNERS  DECISIONS.md  DEPLOYMENT.md  Dockerfile  Makefile  PROGRESS.md  README.md  _audit_analysis.py  _check_html.py  docker-compose.yml  interview_questions.md  pyproject.toml  requirements.txt  streamlit_app.py
.agents/: AGENTS.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  pages.yml
backups/pre-run-20260619-172130/: kmeans_v1.joblib  model_card.md
backups/pre-run-20260619-172130/processed/: channels_clean.parquet  creator_clusters.parquet  creator_features.parquet  videos_clean.parquet
backups/pre-run-20260619-172130/reports/: eda_summary.md
config/: config.yaml
data/processed/: channels_clean.parquet  creator_clusters.parquet  creator_features.parquet
docs/: index.html
infrastructure/: alerting.py  drift_detection.py  scheduler.py
models/: model_card.md
powerbi/: BUILD.md  BUILD_GUIDE.md
reports/: at_risk_creators.csv  eda_summary.md
scripts/: lookup_bbc.py  lookup_channels.py  test_extraction.py  verify_channels.py
sql/: schema.sql
src/: config.py  run_pipeline.py
src/analysis/: duckdb_setup.py
src/extraction/: extract_channels.py  extract_videos.py  manifest.py  quota_planner.py  seed_channels.py  youtube_client.py
src/features/: clean.py  engineer.py
src/load/: load_mysql.py
src/modeling/: cluster.py
src/reporting/: at_risk_report.py
src/visualization/: generate_dashboard.py
tests/: test_cleaning.py  test_clustering.py  test_engineering.py  test_extraction.py  test_load.py
