[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "youtube-creator-retention"
version = "1.0.0"
description = "YouTube Creator Retention & Clustering Pipeline"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "tenacity>=9.0.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "scikit-learn>=1.6.0",
    "duckdb>=1.2.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "joblib>=1.4.0",
    "matplotlib>=3.9.0",
    "isodate>=0.7.0",
    "pyarrow>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mysql-connector-python>=9.0.0",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
